Ajout des noms et prénoms

--- a/Analyse_de_donnée.ipynb
+++ b/Analyse_de_donnée.ipynb
@@ -750,6 +750,15 @@
     "\n",
     "Overall, this segmentation allows the company to base its decisions on facts rather than intuition, improving its understanding of customer diversity and supporting more effective and data-driven business strategies."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acdf89b",
+   "metadata": {},
+   "source": [
+    "-----------------\n",
+    "Par : Liam Croguennec - Baptist Jeanjena - Valentin Auffray - Raphael Girard"
+   ]
   }
  ],
  "metadata": {
